# todo-list

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: cliHandler.hpp  consoleUI.hpp  dateUtils.hpp  fileManager.hpp  settings.hpp  tagManager.hpp  task.hpp  taskManager.hpp
src/: cliHandler.cpp  consoleUI.cpp  dateUtils.cpp  fileManager.cpp  logger.cpp  logger.hpp  main.cpp  settings.cpp  settings.hpp  tagManager.cpp  task.hpp  taskManager.cpp  taskManager.hpp  ui.hpp  utils.cpp
src/cli/: cli.cpp  cli.hpp  cli_handler.cpp
src/console/: console.cpp  console.hpp  console_handler.cpp
src/file_manager/: fileManager.cpp  fileManager.hpp
src/parse_arguments/: arguments.cpp  parser.cpp  parser.hpp
src/tag/: manager.cpp  tag.hpp
src/task/: filter.cpp  getters.cpp  manager.cpp  manager.hpp  task.hpp
src/utils/: utils.cpp  utils.hpp
